--- a/src/sections/content-section/content-section.css
+++ b/src/sections/content-section/content-section.css
@@ -8,9 +8,14 @@ html {
 
 .content-section {
   display: block;
-  padding: 120px 3%;
+  padding: 120px 3% 60px;
   position: relative;
   background-color: transparent;
+}
+
+@media only screen and (max-width: 478px) {
+.content-section {
+  padding: 60px 3% 30px;
 }
 
 .container {
